@@ -2,7 +2,6 @@ package uk.gov.hmcts.reform.iacasedocumentsapi.component;
 
 import static com.google.common.collect.Sets.newHashSet;
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.mockito.Mockito.when;
 import static uk.gov.hmcts.reform.iacasedocumentsapi.component.testutils.fixtures.AsylumCaseForTest.anAsylumCase;
 import static uk.gov.hmcts.reform.iacasedocumentsapi.component.testutils.fixtures.CallbackForTest.CallbackForTestBuilder.callback;
 import static uk.gov.hmcts.reform.iacasedocumentsapi.component.testutils.fixtures.CaseDetailsForTest.CaseDetailsForTestBuilder.someCaseDetailsWith;
@@ -15,8 +14,8 @@ import java.util.List;
 import java.util.Optional;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.ValueSource;
-import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.security.test.context.support.WithMockUser;
+import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import uk.gov.hmcts.reform.iacasedocumentsapi.component.testutils.*;
 import uk.gov.hmcts.reform.iacasedocumentsapi.component.testutils.fixtures.PreSubmitCallbackResponseForTest;
 import uk.gov.hmcts.reform.iacasedocumentsapi.domain.entities.AppealType;
@@ -30,14 +29,13 @@ import uk.gov.hmcts.reform.iacasedocumentsapi.utilities.DocmosisStub;
 class GenerateDecisionAndReasonsTestWiremock extends SpringBootIntegrationTest implements WithServiceAuthStub,
         WithDocumentUploadStub, DocmosisStub, WithIdamStub, GivensBuilder, WithRoleAssignmentStub {
 
-    @MockBean
+    @MockitoBean
     private FeatureToggler featureToggler;
 
     @ParameterizedTest
     @ValueSource(booleans = {true, false})
     @WithMockUser(authorities = {"caseworker-ia", "tribunal-caseworker"})
     void generates_decision_and_reasons(boolean cdamEnabled) {
-        when(featureToggler.getValue("use-ccd-document-am", false)).thenReturn(cdamEnabled);
         addServiceAuthStub(server);
         addDocumentUploadStub(server, cdamEnabled);
         withDefaults(server);
@@ -79,7 +77,7 @@ class GenerateDecisionAndReasonsTestWiremock extends SpringBootIntegrationTest i
         Optional<List<IdValue<DocumentWithMetadata>>> draftDecisionAndReasonsDocuments =
             response.getAsylumCase().read(DRAFT_DECISION_AND_REASONS_DOCUMENTS);
 
-        IdValue<DocumentWithMetadata> documentWithMetadataIdValue = draftDecisionAndReasonsDocuments.get().get(0);
+        IdValue<DocumentWithMetadata> documentWithMetadataIdValue = draftDecisionAndReasonsDocuments.get().getFirst();
 
         assertThat(draftDecisionAndReasonsDocuments.get().size()).isEqualTo(1);
         assertThat(documentWithMetadataIdValue.getValue().getTag()).isEqualTo(DECISION_AND_REASONS_DRAFT);
